# hellostress

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  OPEN_SOURCE_AUDIT.md  OPEN_SOURCE_READINESS_REPORT.md  README.md  ROADMAP.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_case.yml  bug_report.yml  config.yml  feature_request.yml  validation_case.yml
.github/workflows/: ci.yml
assets/: README.md  terminal-demo.cast
docs/: architecture.md  artifact-lifecycle-runbook.md  assumptions.md  benchmark.md  contributing_examples.md  developer-guide.md  examples.md  github_launch_checklist.md  llm-quickstart.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  quickstart.md  release_checklist.md  repo-map.md  repository-settings.md  user-guide.md  validation.md
examples/: README.md  smoke_test.sh
examples/beam_cantilever/: README.md  expected_metrics.json  prompt.txt  run.sh
examples/bracket_linear_elastic/: README.md  expected_metrics.json  prompt.txt  run.sh
examples/hand_calc_comparison/: README.md  expected_metrics.json  hand_calc.md  hand_calc_walkthrough.ipynb  prompt.txt  run.sh
examples/minimal/: README.md  expected_output.md  run.sh
examples/plate_pressure/: README.md  expected_metrics.json  prompt.txt  run.sh
examples/plate_with_hole/: README.md  expected_metrics.json  prompt.txt  run.sh
examples/simply_supported_beam/: README.md  expected_metrics.json  prompt.txt  run.sh
fea_engine/: __init__.py  artifacts.py  cli.py  errors.py  generator.py  llm_client.py  models.py  parser.py  postprocessor.py  presentation.py  service.py  settings.py  solver.py  summarizer.py  utils.py  validation.py  visualizer.py
launch/: README.md  discord-slack-message.md  educational-thread.md  hacker-news-post.md  launch-calendar.md  linkedin-post.md  reddit-posts.md  release-v0.1.0.md  technical-blog-outline.md  x-thread.md
launch/issues/: 01-rectangular-plate-benchmark.md  02-mesh-convergence-interpretation.md  03-solver-comparison-intake.md  04-unsupported-geometry-errors.md  05-assets-regeneration-checklist.md  06-workspace-policy-example.md  07-boundary-condition-parser-tests.md  (+3 more)
templates/: __init__.py  beam_template.py  bracket_template.py  plate_template.py  plate_with_hole_template.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_generator_golden.py  test_integration_docker_smoke.py  test_parser.py  test_presentation.py  test_service.py  test_settings.py  test_solver.py  test_utils.py  test_validation.py  test_visualizer.py
tools/: check_markdown_links.py  run_validation.py
validation/: README.md  schema.json
(+46 files in other folders)
